--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,5 @@
 @import 'layout/_header.scss';
 @import 'layout/_body.scss';
 @import 'layout/_footer.scss';
+// Components
+@import 'components/_comments.scss';
